--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   image: ^4.1.0
   desktop_drop: ^0.6.1
   file_picker: ^10.3.1
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
